--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@effect/sql": "^0.49.0",
     "@effect/sql-drizzle": "^0.48.0",
     "@effect/sql-pg": "^0.50.1",
+    "@opencode-ai/sdk": "^1.1.19",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
