--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,30 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # Better Auth
 # Secret key for session encryption (generate with: openssl rand -base64 32)
 BETTER_AUTH_SECRET=your-secret-key-here-replace-in-production
+
+# ============================================
+# Sprites Configuration (REQUIRED for execution)
+# ============================================
+
+# Sprites.dev API token
+# Get your token from https://sprites.dev
+SPRITES_TOKEN=your-sprites-token-here
+
+# Base URL for webhook callbacks (your deployed app URL)
+# Required - sprites will call this URL on completion/error
+WEBHOOK_BASE_URL=https://your-app.vercel.app
+
+# Optional: Sprite timeout in milliseconds (default: 1 hour)
+# SPRITE_TIMEOUT_MS=3600000
+
+# Optional: Custom setup script to run in sprites before execution
+# If not set, uses default script that installs opencode via npm
+# SPRITE_SETUP_SCRIPT="npm install -g @opencode/cli"
+
+# ============================================
+# Cron Configuration (Optional)
+# ============================================
+
+# Secret for cron endpoint authentication (recommended for production)
+# Generate with: openssl rand -base64 32
+# CRON_SECRET=your-cron-secret-here
